--- a/style.css
+++ b/style.css
@@ -1,28 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Yantramanav:wght@300&display=swap');
+
 body{
-    overflow-x: hidden;
+
     margin: 0;
     padding: 0;
     font-family: 'Yantramanav', sans-serif !important;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     font-weight: bold;
 }
-
-
+section{
+    margin: 0 !important;
+}
 .bg-img{
-    background: url('./assets/bg.jpg');
+    background: url('./assets/bg-img.jpg');
     background-repeat: no-repeat;
     background-position: center;
-
-
+    width: 100vw;
+    height: 100vh;
 }
 input ,textarea{
     background: transparent !important;
 }
 input:focus{
-    color: rgb(0, 0, 0) !important ;
+    color: rgb(255, 255, 255) !important ;
 }
 ::placeholder{
-    color: rgb(0, 0, 0) !important;
+    color: rgb(255, 255, 255) !important;
 }
-
+#inputNotes{
+    width: 100%;
+}
