--- a/style.css
+++ b/style.css
@@ -18,14 +18,16 @@ section{
     width: 100vw;
     height: 100vh;
 }
-input ,textarea{
+
+textarea, input{
     background: transparent !important;
+    color: white !important;  
 }
-input:focus{
-    color: rgb(255, 255, 255) !important ;
+textarea:focus, input:focus{
+    color: white;
 }
-::placeholder{
-    color: rgb(255, 255, 255) !important;
+.form-control::placeholder{
+    color: white;
 }
 #inputNotes{
     width: 100%;
